[SYNCOPE-1531] Core support